2013-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web (pdf_end_stream): Always write "\nendstream" for
	PDF/A-1b compliance.

2013-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Always write "\n" after "obj" and before "endobj".
	Suggested by Vincent Immler (http://sarovar.org/tracker/#4341).

2013-12-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-TeX Version 2.6 [2013-11-21].
	* etex_version.h, pdftex.web: Enable hyphenation of text between
	\beginL and \endL or between \beginR and \endR.

2013-09-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c (t1_subset_ascii_part): Remove UniqueID in subsets.
	Report from Christian Zietz (czietz/gmx/net),
	tex-k 01 Sep 2013 11:25:47 and previous.
	(Imported from dvipsk.)

2013-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.test, tests/postV[37].{afm.ttf}: New test and data.
	* am/ttf2afm.am: Add the new test.

2013-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.c, writettf.c: Treat unknown 'post' table versions
	(found in some broken fonts) as 3.0, i.e., no Glyph names.

2013-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am, tests/pdfimage.tex: Add a .pdf image.

2013-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfimage.test, tests/pdfimage.tex: New test and data.
	* am/pdftex.am: Add the new test.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mapfile.c: First #include <w2c/config.h> via "ptexlib.h".
	* pdftosrc.cc: First #include <w2c/config.h>.

2013-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.
	* ptexlib.h (initstarttime, makecstring, makecfilename,
	getcreationdate, getfilemoddate, getfilesize): Move declarations
	of functions also used by e-(u)pTeX from here to ../texmfmp.h.
	* utils.c (initstarttime, makecstring, makecfilename,
	getcreationdate, getfilemoddate, getfilesize): Move definition
	of these functions from here to ../lib/texmfmp.c.
