@@ -1,5 +1,5 @@
 /*
-Copyright 2010-2012 Han The Thanh, <thanh@pdftex.org>
+Copyright 2010-2014 Han The Thanh, <thanh@pdftex.org>
 
 This file is part of pdfTeX.
 
