@@ -1,5 +1,4 @@
-%
-% Copyright 1996-2011 Han The Thanh, <thanh@pdftex.org>
+% Copyright 1996-2014 Han The Thanh, <thanh@pdftex.org>
 %
 % This file is part of pdfTeX.
 %
