@@ -1,5 +1,5 @@
-/***********************************************************************
-Copyright 2002-2012 Han The Thanh, <thanh@pdftex.org>
+/*
+Copyright 2002-2014 Han The Thanh, <thanh@pdftex.org>
 
 This file is part of pdfTeX.
 
